# simple-todo-rust-api

./: Cargo.toml  db.sqlite
src/: api.rs  error.rs  lib.rs  main.rs  router.rs  todo.rs
