[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "macros",
] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
